tests/snapshots/regression-reactive_armor_hardener-kinetic_thermal.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                  = Rifter
ship/upgradeFree                           = 400.000000
ship/scanStrength                          = 9.600000
ship/passiveShieldEffectiveRechargeRate    = 5.340454
ship/passiveShieldRechargeRate             = 3.000000
ship/ehp                                   = 3357.182693
ship/shieldThermalDamageEffectiveResonance = 0.147000
ship/shieldKineticDamageEffectiveResonance = 0.414750
ship/hullThermalDamageEffectiveResonance   = 0.084420
ship/hullKineticDamageEffectiveResonance   = 0.317580
ship/armorThermalDamageEffectiveResonance  = 0.083093
ship/armorKineticDamageEffectiveResonance  = 0.360680
ship/shieldEhp                             = 1001.335080
ship/hullEhp                               = 1088.308387
ship/armorEhp                              = 1267.539225
ship/shieldDamageEffectiveResonance        = 0.561750
ship/hullDamageEffectiveResonance          = 0.402000
ship/armorDamageEffectiveResonance         = 0.443773
ship/powerFree                             = 49.250000
ship/cpuFree                               = 108.500000
ship/capacitorDepletesIn                   = -1.000000
ship/capacitorPeakDeltaPercentage          = 74.800000
ship/capacitorPeakDelta                    = 6.233333
ship/capacitorPeakLoad                     = 2.100000
ship/capacitorPeakRecharge                 = 8.333333
ship/alignTime                             = 3.195020
ship/hp                                    = 437.500000
ship/powerOutput                           = 51.250000
ship/powerLoad                             = 2.000000
ship/maxVelocity                           = 456.250000
ship/cpuOutput                             = 162.500000
ship/cpuLoad                               = 54.000000
ship/rechargeRate                          = 93750.000000
ship/agility                               = 2.160000
ship/maxTargetRange                        = 28125.000000
ship/scanSpeed                             = 1125.000000
ship/kineticDamageResonance                = 0.402000
ship/thermalDamageResonance                = 0.402000
ship/explosiveDamageResonance              = 0.402000
ship/emDamageResonance                     = 0.402000
ship/warpCapacitorNeed                     = 0.000001
ship/scanLadarStrength                     = 9.600000
ship/shieldCapacity                        = 562.500000
ship/armorHP                               = 562.500000
ship/armorEmDamageResonance                = 0.340000
ship/armorExplosiveDamageResonance         = 0.765000
ship/armorKineticDamageResonance           = 0.456557
ship/armorThermalDamageResonance           = 0.395683
ship/shieldEmDamageResonance               = 0.875000
ship/shieldExplosiveDamageResonance        = 0.437500
ship/shieldKineticDamageResonance          = 0.525000
ship/shieldThermalDamageResonance          = 0.700000
ship/maxResearchGangSize                   = 30.000000
ship/shipBonusMF                           = -37.500000
ship/shieldRechargeRate                    = 468750.000000
ship/capacitorCapacity                     = 312.500000
ship/shieldUniformity                      = 1.000000
ship/shipBonus2AF                          = 25.000000
ship/shipBonusGC                           = 25.000000
ship/shipBonusCC                           = 25.000000
ship/shipBonusMB                           = 25.000000
ship/shipBonusCB                           = 25.000000
ship/shipBonusAB                           = 25.000000
ship/shipBonusMI                           = 25.000000
ship/shipBonusAI                           = 25.000000
ship/shipBonusCI                           = 25.000000
ship/shipBonusGI                           = 25.000000
ship/scanResolution                        = 825.000000
ship/shipBonusMF2                          = 50.000000
ship/advancedAgility                       = 0.750000
ship/jumpDriveConsumptionAmount            = 1000.000000
ship/advancedCapitalAgility                = 0.750000
ship/jumpDriveCapacitorNeed                = 0.750000
ship/shipBonusUF1                          = 5.000000
ship/shipBonusUF2                          = 5.000000
ship/shipBonusUC1                          = 5.000000
ship/shipBonusUC2                          = 5.000000
ship/shipBonusUB1                          = 5.000000
ship/shipBonusUB2                          = 5.000000
ship/conduitPassengerBonusModAdd           = 25.000000
ship/shipBonusOreDestroyer1                = 25.000000
ship/shipBonusOreDestroyer2                = 25.000000
ship/shipBonusOreDestroyer3                = 25.000000
ship/shipBonusSoEECS1                      = 25.000000
ship/shipBonusSoEECS2                      = 25.000000
ship/shipBonusSoEECS3                      = 25.000000
ship/shipBonusSoEECS4                      = 25.000000
ship/shipBonusSoEECS5                      = 25.000000
ship/shipBonusAB3                          = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

low_1/type                          = Reactive Armor Hardener
low_1/state                         = active
low_1/capacitorPeakLoad             = 2.100000
low_1/cycleTime                     = 5000.000000
low_1/capacitorNeed                 = 10.500000
low_1/duration                      = 5000.000000
low_1/armorEmDamageResonance        = 1.000000
low_1/armorExplosiveDamageResonance = 1.000000
low_1/armorKineticDamageResonance   = 0.700000
low_1/armorThermalDamageResonance   = 0.700000
low_1/heatDamage                    = 4.950000

low_2/type  = Damage Control II
low_2/state = online
