tests/snapshots/regression-reactive_armor_hardener-no_skills.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Rifter
ship/capacitorStablePercentage               = 49.000000
ship/maxTargetsCharacter                     = 0.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 8.000000
ship/passiveShieldEffectiveRechargeRate      = 2.837438
ship/passiveShieldRechargeRate               = 1.800000
ship/ehp                                     = 2525.405476
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.129121
ship/armorKineticDamageEffectiveResonance    = 0.133706
ship/armorExplosiveDamageEffectiveResonance  = 0.128162
ship/armorEmDamageEffectiveResonance         = 0.085000
ship/shieldEhp                               = 709.359597
ship/hullEhp                                 = 870.646710
ship/armorEhp                                = 945.399169
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.475989
ship/powerFree                               = 39.000000
ship/cpuFree                                 = 76.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 16.000000
ship/capacitorPeakDelta                      = 0.800000
ship/capacitorPeakLoad                       = 4.200000
ship/capacitorPeakRecharge                   = 5.000000
ship/alignTime                               = 4.733364
ship/powerLoad                               = 2.000000
ship/cpuLoad                                 = 54.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/armorEmDamageResonance                  = 0.340000
ship/armorExplosiveDamageResonance           = 0.512648
ship/armorKineticDamageResonance             = 0.534824
ship/armorThermalDamageResonance             = 0.516486
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/shipBonusMF                             = 0.000000
ship/shipBonus2AF                            = 0.000000
ship/shipBonusGC                             = 0.000000
ship/shipBonusCC                             = 0.000000
ship/shipBonusMB                             = 0.000000
ship/shipBonusCB                             = 0.000000
ship/shipBonusAB                             = 0.000000
ship/shipBonusMI                             = 0.000000
ship/shipBonusAI                             = 0.000000
ship/shipBonusCI                             = 0.000000
ship/shipBonusGI                             = 0.000000
ship/shipBonusMF2                            = 0.000000
ship/shipBonusUF1                            = 0.000000
ship/shipBonusUF2                            = 0.000000
ship/shipBonusUC1                            = 0.000000
ship/shipBonusUC2                            = 0.000000
ship/shipBonusUB1                            = 0.000000
ship/shipBonusUB2                            = 0.000000
ship/shipBonusOreDestroyer1                  = 0.000000
ship/shipBonusOreDestroyer2                  = 0.000000
ship/shipBonusOreDestroyer3                  = 0.000000
ship/shipBonusSoEECS1                        = 0.000000
ship/shipBonusSoEECS2                        = 0.000000
ship/shipBonusSoEECS3                        = 0.000000
ship/shipBonusSoEECS4                        = 0.000000
ship/shipBonusSoEECS5                        = 0.000000
ship/shipBonusAB3                            = 0.000000

low_1/type                          = Reactive Armor Hardener
low_1/state                         = active
low_1/capacitorPeakLoad             = 4.200000
low_1/cycleTime                     = 10000.000000
low_1/armorEmDamageResonance        = 1.000000
low_1/armorExplosiveDamageResonance = 0.655000
low_1/armorKineticDamageResonance   = 0.820000
low_1/armorThermalDamageResonance   = 0.925000

low_2/type  = Damage Control II
low_2/state = online

ship                          = skill Minmatar Frigate needs 1 has 0
ship                          = skill Spaceship Command needs 1 has 0
low_1/Reactive Armor Hardener = skill Hull Upgrades needs 3 has 0
low_1/Reactive Armor Hardener = skill Mechanics needs 1 has 0
low_2/Damage Control II       = skill Hull Upgrades needs 4 has 0
low_2/Damage Control II       = skill Mechanics needs 1 has 0
